--- a/src/index.scss
+++ b/src/index.scss
@@ -18,30 +18,38 @@ a {
     color: #ff1f8f;
   }
 }
+.landingPage {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 5rem;
+  .svgContainer {
+    width: 75%;
+    aspect-ratio: 4/2.7;
+    display: flex;
+    justify-content: center;
+  }
+  svg {
+    transform: scale(1.1);
+    #schoolSvg {
+      stroke: white;
+      stroke-dasharray: 1000;
+      stroke-dashoffset: 1000;
+      pointer-events: none;
+      animation: animateDash 11.5s linear infinite;
+    }
+  }
+  h1 {
+    font-size: 3rem;
+    text-align: center;
+  }
+}
 .mainSection {
   display: grid;
-  gap: 2rem;
-  // min-height: 100vh;
-  margin: 0 2rem;
+  margin: 5rem 2rem;
   margin-bottom: 4rem;
-  &:nth-child(odd) {
-    grid-template-columns: 2fr 3fr;
-    .sectionCoverPhoto {
-      grid-column: 1;
-    }
-    .sectionText {
-      grid-column: 2;
-    }
-  }
-  &:nth-child(even) {
-    grid-template-columns: 3fr 2fr;
-    .sectionCoverPhoto {
-      grid-column: 2;
-    }
-    .sectionText {
-      grid-column: 1;
-    }
-  }
 }
 .sectionCoverPhoto {
   grid-row: 1;
@@ -121,7 +129,36 @@ nav {
     }
   }
 }
-@media (min-width: 768px) {
+@media (max-width: 900px) {
+  .landingPage {
+    h1 {
+      font-size: 2rem;
+    }
+  }
+  .mainSection {
+    grid-template-rows: auto auto;
+    .sectionCoverPhoto {
+      margin-top: 10%;
+      margin-bottom: 3rem;
+      grid-row: 1;
+      width: 50%;
+    }
+    .sectionText {
+      grid-row: 2;
+      margin: 0 2rem;
+    }
+  }
+  .sectionHeader {
+    font-size: 2.2rem;
+    margin-bottom: 1rem;
+  }
+  .links {
+    a {
+      font-size: 1.8rem;
+    }
+  }
+}
+@media (min-width: 900px) {
   .hamburger {
     display: none;
   }
@@ -130,11 +167,43 @@ nav {
     margin: 0 !important;
     display: block !important;
     a {
-    font-size: 1.5rem;
-    margin-right: 0.35rem;
+      font-size: 1.5rem;
+      margin-right: 0.35rem;
     }
   }
   nav.active {
     height: auto;
+  }
+  .mainSection {
+    gap: 2rem;
+    &:nth-child(odd) {
+      grid-template-columns: 2fr 3fr;
+      .sectionCoverPhoto {
+        grid-column: 1;
+      }
+      .sectionText {
+        grid-column: 2;
+      }
+    }
+    &:nth-child(even) {
+      grid-template-columns: 3fr 2fr;
+      .sectionCoverPhoto {
+        grid-column: 2;
+      }
+      .sectionText {
+        grid-column: 1;
+      }
+    }
+  }
+}
+@keyframes animateDash {
+  40% {
+    stroke-dashoffset: 0;
+  }
+  80% {
+    stroke-dashoffset: 1000;
+  }
+  100% {
+    stroke-dashoffset: 1000;
   }
 }
