--- a/src/index.scss
+++ b/src/index.scss
@@ -18,6 +18,10 @@ a {
     color: #ff1f8f;
   }
 }
+h1 {
+  font-size: 3rem;
+  text-align: center;
+}
 .landingPage {
   min-height: 100vh;
   display: flex;
@@ -27,6 +31,7 @@ a {
   margin-bottom: 5rem;
   .svgContainer {
     width: 75%;
+    max-width: 1000px;
     aspect-ratio: 4/2.7;
     display: flex;
     justify-content: center;
@@ -36,20 +41,30 @@ a {
     #schoolSvg {
       stroke: white;
       stroke-dasharray: 1000;
-      stroke-dashoffset: 1000;
       pointer-events: none;
-      animation: animateDash 11.5s linear infinite;
+      stroke-dashoffset: 1000;
+      transition: stroke-dashoffset 1s ease-in-out;
+    }
+    &.visible #schoolSvg {
+      stroke-dashoffset: 400;
+      transition: stroke-dashoffset 2.5s ease-in-out;
     }
   }
-  h1 {
-    font-size: 3rem;
-    text-align: center;
-  }
+}
+.timeline {
+  padding-top: 10%;
+  min-height: 70vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 .mainSection {
   display: grid;
-  margin: 5rem 2rem;
-  margin-bottom: 4rem;
+  padding: 5rem 2rem;
+  padding-bottom: 4rem;
+  margin: 0 auto;
+  max-width: 1200px;
 }
 .sectionCoverPhoto {
   grid-row: 1;
@@ -59,6 +74,9 @@ a {
   width: 60%;
 }
 .sectionText {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   grid-row: 1;
   margin-top: 10%;
 }
@@ -69,10 +87,14 @@ a {
 }
 .sectionContent {
   p {
+    text-align: justify;
     margin-bottom: 0.65rem;
   }
 }
 nav {
+  max-width: 100vw;
+  overflow-x: auto;
+  z-index: 10;
   display: flex;
   position: relative;
   position: sticky;
@@ -80,6 +102,7 @@ nav {
   background-color: black;
   padding: 0.6rem;
   padding-left: 1.4rem;
+  min-height: 2rem;
   &.active {
     height: 100vh;
     .links {
@@ -118,7 +141,7 @@ nav {
     display: none;
   }
   a {
-    font-size: 2.5rem;
+    font-size: 2.7rem;
     text-decoration: none;
     font-weight: bold;
     margin-bottom: 0.5rem;
@@ -129,10 +152,90 @@ nav {
     }
   }
 }
+.timelineEntries {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  margin: 5rem 3rem;
+  margin-bottom: 4rem;
+  text-align: center;
+  max-width: 1200px;
+
+  .row {
+    display: flex;
+    & > .date {
+      overflow: hidden;
+      position: relative;
+      width: 58%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      user-select: none;
+      span {
+        z-index: 2;
+        color: gray;
+        background-color: black;
+        border: 1px solid gray;
+        border-radius: 0.4rem;
+        padding: 0.5rem;
+      }
+      &::before {
+        content: '';
+        position: absolute;
+        width: 50%;
+        height: 0.1rem;
+        background-color: gray;
+      }
+    }
+    & > :not(.date) {
+      width: 42%;
+      border: 1px solid white;
+      border-radius: 0.4rem;
+      padding: 0.8rem;
+    }
+    &.left {
+      flex-direction: row;
+      .date::before {
+        margin-right: 50%;
+      }
+    }
+    &.right {
+      flex-direction: row-reverse;
+      .date::before {
+        margin-left: 50%;
+      }
+    }
+  }
+}
 @media (max-width: 900px) {
-  .landingPage {
-    h1 {
-      font-size: 2rem;
+  h1 {
+    font-size: 2rem;
+  }
+  .timelineEntries {
+    width: 72%;
+    .row {
+      flex-direction: column-reverse !important;
+      align-items: center;
+      margin-bottom: 1rem;
+      & > :not(.date) {
+        width: 100%;
+        text-align: justify;
+      }
+      .date {
+        width: 100%;
+        span {
+          border: none;
+        }
+        &::before {
+          display: none;
+        }
+      }
+      &.left .date {
+        justify-content: flex-start;
+      }
+      &.right .date {
+        justify-content: flex-end;
+      }
     }
   }
   .mainSection {
@@ -153,6 +256,7 @@ nav {
     margin-bottom: 1rem;
   }
   .links {
+    align-items: center;
     a {
       font-size: 1.8rem;
     }
@@ -167,8 +271,8 @@ nav {
     margin: 0 !important;
     display: block !important;
     a {
-      font-size: 1.5rem;
-      margin-right: 0.35rem;
+      font-size: 1.3rem;
+      margin-right: 0.75rem;
     }
   }
   nav.active {
@@ -194,16 +298,5 @@ nav {
         grid-column: 1;
       }
     }
-  }
-}
-@keyframes animateDash {
-  40% {
-    stroke-dashoffset: 0;
-  }
-  80% {
-    stroke-dashoffset: 1000;
-  }
-  100% {
-    stroke-dashoffset: 1000;
   }
 }
