--- a/src/index.scss
+++ b/src/index.scss
@@ -72,6 +72,21 @@ h1 {
   margin-left: auto;
   margin-right: auto;
   width: 60%;
+  display: flex;
+  justify-content: center;
+}
+.animatedSvg {
+  svg g {
+    stroke: white;
+    stroke-dasharray: 1000;
+    pointer-events: none;
+    stroke-dashoffset: 1000;
+    transition: stroke-dashoffset 1s ease-in-out;
+  }
+  &.visible svg g {
+    stroke-dashoffset: 400;
+    transition: stroke-dashoffset 2.5s ease-in-out;
+  }
 }
 .sectionText {
   display: flex;
@@ -91,9 +106,26 @@ h1 {
     margin-bottom: 0.65rem;
   }
 }
+.languagePicker {
+  background-color: black;
+  border: 1px solid white;
+  width: 3rem;
+  height: 2rem;
+  margin-right: 1rem;
+  padding: 0.2rem;
+  border-radius: 0.4rem;
+  color: white;
+  font-weight: bold;
+  text-transform: uppercase;
+  &:active {
+    background-color: rgb(34, 34, 34);
+  }
+  &:hover {
+    cursor: pointer;
+  }
+}
 nav {
   max-width: 100vw;
-  overflow-x: auto;
   z-index: 10;
   display: flex;
   position: relative;
@@ -136,6 +168,7 @@ nav {
 }
 .links {
   display: flex;
+  overflow-x: auto;
   margin: auto;
   &.hidden {
     display: none;
@@ -157,7 +190,7 @@ nav {
   flex-direction: column;
   gap: 1rem;
   margin: 5rem 3rem;
-  margin-bottom: 4rem;
+  margin-bottom: auto;
   text-align: center;
   max-width: 1200px;
 
@@ -275,9 +308,9 @@ nav {
   .links {
     flex-direction: row !important;
     margin: 0 !important;
-    display: block !important;
+    display: flex !important;
     a {
-      font-size: 1.3rem;
+      font-size: 1rem;
       margin-right: 0.75rem;
     }
   }
