--- a/src/index.scss
+++ b/src/index.scss
@@ -22,6 +22,9 @@ h1 {
   font-size: 3rem;
   text-align: center;
 }
+h3 {
+  text-align: center;
+}
 .landingPage {
   min-height: 100vh;
   display: flex;
