fix nav in mobile

--- a/src/index.scss
+++ b/src/index.scss
@@ -252,6 +252,9 @@ nav {
   h1 {
     font-size: 2rem;
   }
+  .languagePicker {
+    position: absolute;
+  }
   .timelineEntries {
     width: 72%;
     .row {
