--- a/src/index.scss
+++ b/src/index.scss
@@ -104,7 +104,6 @@ h3 {
 }
 .sectionContent {
   p {
-    text-align: justify;
     margin-bottom: 0.65rem;
   }
 }
@@ -208,7 +207,6 @@ nav {
       user-select: none;
       span {
         z-index: 2;
-        color: gray;
         background-color: black;
         border: 1px solid gray;
         border-radius: 0.4rem;
@@ -260,18 +258,15 @@ nav {
     .row {
       flex-direction: column-reverse !important;
       align-items: center;
-      margin-bottom: 1rem;
-      border: 1px solid white;
-      border-radius: 0.4rem;
-      padding: 1rem;
+      margin-bottom: 3rem;
       & > :not(.date) {
         width: 100%;
-        text-align: justify;
         border: none;
         padding: 0;
       }
       .date {
         width: 100%;
+        padding: 0;
         span {
           border: none;
         }
@@ -307,7 +302,7 @@ nav {
   .links {
     align-items: center;
     a {
-      font-size: 1.8rem;
+      font-size: 2.3rem;
     }
   }
 }
